# app/user/router.go
@@ -8,20 +8,13 @@ import (
 
 
 func Routers(e *gin.Engine) {
-	user := e.Group("/v1/user")
+	user := e.Group("/v1/users")
 	{
-<<<<<<< HEAD
-		order.GET("", app.Wrapper(LoadUser))
-		order.POST("", app.Wrapper(CreateUser))
-=======
-		user.GET("", LoadUser)
+		user.POST("", app.Wrapper(CreateUser))
 		// Querystring parameters
-		user.GET("/:id", LoadUserById)
-		user.POST("", CreateUser)
-		// will math /v1/user/  /v1/user/*
-		// c.FullPath() == "/v1/user/:name/*action"
-		//user.POST("/:name/*action", LoadUserByName)
+		user.GET("/:id", app.Wrapper(LoadUserById))
+		user.PUT("/:id", app.Wrapper(UpdateUser))
+		user.GET("/", app.Wrapper(LoadAllUsers))
 
->>>>>>> master
 	}
 }
